# dbt-db2fori

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
dbt/adapters/db2_for_i/: __init__.py  __version__.py  column.py  connections.py  impl.py  relation.py
dbt/include/db2_for_i/: dbt_project.yml
dbt/include/db2_for_i/macros/: adapters.sql  apply_grants.sql  catalog.sql
dbt/include/db2_for_i/macros/materializations/incremental/: helpers.sql  incremental.sql  merge.sql
dbt/include/db2_for_i/macros/materializations/seed/: seed.sql
dbt/include/db2_for_i/macros/materializations/snapshot/: snapshot.sql  snapshot_merge.sql  strategies.sql
dbt/include/db2_for_i/macros/materializations/table/: table.sql
dbt/include/db2_for_i/macros/materializations/tests/: helpers.sql  where_subquery.sql
dbt/include/db2_for_i/macros/materializations/view/: view.sql
src/dbt/adapters/db2_for_i/: connections.py  impl.py
src/dbt/include/db2_for_i/macros/materializations/incremental/: incremental.sql
src/dbt/include/db2_for_i/macros/materializations/view/: view.sql
tests/: test_dbt_db2fori.py
