[tool.poetry]
name = "dbt-db2fori"
version = "0.1.0"
description = ""
authors = ["Seth <sdowusu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyodbc = "^4.0.32"
dbt-core = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
