[tool.poetry]
name = "dbt-db2fori"
version = "0.1.1"
description = "dbt adapter for IBM db2 for i"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kaysef/dbt-db2fori"
repository = "https://github.com/kaysef/dbt-db2fori"
documentation = "https://github.com/kaysef/dbt-db2fori"
authors = ["Seth O <sdowusu@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
pyodbc = "^4.0.32"
dbt-core = "^0.21.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
